--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-cli-plugin-quasar": "^3.0.2",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.2.0",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
